add_subdirectory(stack)

add_subdirectory(queue/queue)
add_subdirectory(queue/circular_queue)

add_subdirectory(linked_list/singly_linked_list)
add_subdirectory(linked_list/doubly_linked_list)
add_subdirectory(linked_list/circular_singly_linked_list)
add_subdirectory(linked_list/circular_doubly_linked_list)

add_subdirectory(heap/binary_heap/maximum_binary_heap)
add_subdirectory(heap/binary_heap/minimum_binary_heap)

add_subdirectory(hash_table)